# secret_app

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
src/secrets_app/: settings.py
src/secrets_app/models/: secret.py
src/secrets_app/routes/: main.py  secret.py
src/secrets_app/util/: postgres.py
tests/: conftest.py  data_for_tests.py  test_secret.py
